--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
-endi:
-  name: Nanang
+nanang:
+  name: Nanang Setia Budi
   title: Pengurus
   url: https://github.com/nanangsb
   image_url: https://github.com/nanangsb.png
