--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,17 @@
-nanang:
-  name: Nanang Setia Budi
-  title: Pengurus
-  url: https://github.com/nanangsb
-  image_url: https://github.com/nanangsb.png
+endi:
+  name: Endilie Yacop Sucipto
+  title: Maintainer of Docusaurus
+  url: https://github.com/endiliey
+  image_url: https://github.com/endiliey.png
+
+yangshun:
+  name: Yangshun Tay
+  title: Front End Engineer @ Facebook
+  url: https://github.com/yangshun
+  image_url: https://github.com/yangshun.png
+
+slorber:
+  name: Sébastien Lorber
+  title: Docusaurus maintainer
+  url: https://sebastienlorber.com
+  image_url: https://github.com/slorber.png
